# runescript-dsl

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
docs/: api-reference.md  development-plan.md  grammar-guide.md
examples/: README.md
examples/basic/: hello.rcs  korean.rune  korean_g2p.spell  pipeline.caster
haskell/spell-checker/: package.yaml  stack.yaml
haskell/spell-checker/app/: Main.hs
haskell/spell-checker/src/SpellChecker/: AST.hs  Optimizer.hs  Parser.hs  TypeInfer.hs
haskell/spell-checker/test/: Spec.hs
src/: main.cpp
src/core/: ast.cpp  ast.hpp  interpreter.cpp  interpreter.hpp  parser.cpp  parser.hpp
tests/: CMakeLists.txt  test_ast.cpp  test_examples.cpp  test_interpreter.cpp  test_main.cpp  test_parser.cpp
tests/data/: korean_test.spell  simple.rcs  test.rune
